Implemeting States tests and implemeting its model to pass those tests

--- a/spec/fixtures/states.yml
+++ b/spec/fixtures/states.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  name: 
-  abbreviation: MyString
-
-two:
-  name: 
-  abbreviation: MyString
+alagoas:
+  name: Alagoas 
+  abbreviation: AL
