--- a/spec/fixtures/clients.yml
+++ b/spec/fixtures/clients.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  name: MyString
+walmart:
+  name: WalMart
   address: MyString
   contact: MyString
   phone: MyString
